fix(breadcrumbs): alignment issues

--- a/docs/assets/less/overrides.less
+++ b/docs/assets/less/overrides.less
@@ -30,6 +30,7 @@ tr {
 
   > p, > ol, > ul {
     margin-top: var(--su16);
+    padding-left: revert;
   }
 
   > h2 {
@@ -47,7 +48,10 @@ tr {
 
   ol, ul {
     .d-stack8();
-    padding-left: revert;
+  }
+
+  ol > * + * {
+    margin-top: 0!important;
   }
 
   .d-table {
